# HexoChecker

./: .gitignore  README.md  checks_config.py  pyproject.toml
src/checks/: __init__.py  __main__.py  cli.py  config.py  runner.py
src/checks/checkers/: __init__.py  image.py
src/checks/core/: __init__.py  checker.py  colors.py  context.py  exceptions.py  issue.py  resolver.py
src/checks/fixers/: __init__.py  base.py  interactive.py  patch.py
src/checks/reporters/: __init__.py  base.py  console.py
src/checks/resolvers/: __init__.py  default.py  hexo.py
tests/: conftest.py
tests/test_checkers/: __init__.py  test_image.py
tests/test_core/: __init__.py  test_config.py  test_context.py  test_issue.py
tests/test_fixers/: __init__.py  test_interactive.py  test_patch.py
tests/test_reporters/: __init__.py  test_console.py
tests/test_resolvers/: __init__.py  test_hexo.py
