[project]
name = "checks"
version = "0.1.0"
description = "Extensible content checker for blogs and documentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
checks = "checks.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.8", "ty>=0.0.3"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# ============================================================================
# Ruff - Linting and Formatting
# ============================================================================
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented-out code)
    "PL",  # Pylint
    "RUF", # Ruff-specific rules
]
ignore = [
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "PLR2004", # Magic value comparison
    "PLC0415", # Import not at top of file (intentional lazy imports)
    "RUF001",  # String contains ambiguous unicode (allow Chinese)
    "RUF002",  # Docstring contains ambiguous unicode (allow Chinese)
    "RUF003",  # Comment contains ambiguous unicode (allow Chinese)
]

[tool.ruff.lint.isort]
known-first-party = ["checks"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================================
# Pyright - Type Checking (used by ty)
# ============================================================================
[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["**/__pycache__", ".venv", "tests"]
reportMissingImports = true
reportMissingTypeStubs = false

# ============================================================================
# Pytest - Testing
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]

[tool.coverage.run]
source = ["src/checks"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
